[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentproof"
version = "0.10.0"
description = "Test-first IDE for production agents. Don't just build agents — prove they behave."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Evan L" }]
keywords = [
  "ai-agents", "llm", "testing", "simulation", "langgraph",
  "agent-evaluation", "prompt-injection", "guardrails", "ci",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Testing",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/evanl666/agentproof"
Repository = "https://github.com/evanl666/agentproof"

[project.scripts]
agentproof = "agentproof.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["agentproof*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
